--- a/views/style.pug
+++ b/views/style.pug
@@ -1,5 +1,5 @@
 .style
 link(rel='stylesheet', type='text/css', href='/public/style.css')
-link(href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet', integrity='sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN', crossorigin='anonymous')
-<link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
+link(href='https://fonts.googleapis.com/css?family=Abril+Fatface', rel='stylesheet')
+script(src='https://use.fontawesome.com/06476ec048.js')
 script(src='//cdn.ckeditor.com/4.5.11/standard/ckeditor.js')
