--- a/app/public/creative/creative-style.css
+++ b/app/public/creative/creative-style.css
@@ -5,8 +5,8 @@
 body {
 	width: 100%;
 	overflow-x: hidden;
-	font-family: 'Ubuntu', sans-serif;
-	background-image: url('work-desk.jpeg');
+	font-family: 'Abhaya Libre', serif;
+	background-image: url('creative1.jpeg');
 	background-size: cover;
 	background-repeat: no-repeat;
     background-position: top left;
@@ -29,8 +29,8 @@ section {
 }
 
 .home, .about {
-	margin-left: 21%;
-	margin-top: 13%;
+	margin-left: 3%;
+	margin-top: 17%;
 }
 
 hr {
@@ -44,20 +44,19 @@ hr {
 }
 
 .home h4, .about h4, #portfolio-box>h3 {
-	font-weight: bolder;
-	font-family: 'Merriweather', sans-serif;
+	font-family: 'Gloria Hallelujah', cursive;
 }
 
 .home h4 {
-	font-size: 48px;
+	font-size: 60px;
 }
 
 .about h4, #portfolio-box>h3 {
-	font-size: 35px;
+	font-size: 40px;
 }
 
 .home p, .about p {
-	font-size: 19px;
+	font-size: 25px;
 	max-width: 600px;
 }
 
@@ -72,10 +71,10 @@ div.nav-link, .project-item, .skill {
 }
 
 div.nav-link, button#project-close {
-	height: 30px;
-	padding: 5px 15px;
+	height: 32px;
+	padding: 6px 20px;
 	margin: 1px 1px;
-	background-color: #B3EE3A;
+	background-color: #54FF9F;
 	text-decoration: none;
 	color: black;
 	border-radius: 4px;
@@ -97,7 +96,7 @@ button#project-close {
 
 div.nav-link:hover, button#project-close:hover {
 	color: white;
-	background-color: #C0FF3E;
+	background-color: #2E8B57;
 	cursor: pointer;
 }
 
@@ -128,11 +127,11 @@ div.project-item p, #single-project p {
 	padding: 3px 10px;
 	margin: 1px 2px;
 	color: black;
-	background-color: #B3EE3A;
+	background-color: #54FF9F;
 }
 
 div.project-item:hover {
-	background-color: #CDCDC1;
+	background-color: #F4A460;
 	color: white;
 	-webkit-box-shadow: 2px 2px 10px 0px rgba(50, 50, 50, 0.74);
 	-moz-box-shadow:    2px 2px 10px 0px rgba(50, 50, 50, 0.74);
@@ -168,10 +167,11 @@ h3 {
 	width: 94%;
 	margin: auto;
 	padding-top: 20px;
-	margin-top: 20px;
+	margin-top: -20px;
 }
 
 #project-container>p {
+	font-size: 23px;
 	text-align: center;
 	margin: 15px;
 }
