--- a/app/public/style.css
+++ b/app/public/style.css
@@ -3,11 +3,12 @@
 }
 
 body {
+	background-color: #FAFAFA;
+	font-family: Arial, sans-serif;
 	width: 100%;
 	height: 100%;
+	margin: 0px;
 	overflow-x: hidden;
-	font-family: Arial, sans-serif;
-	background-color: #FAFAFA;
 }
 
 .logo {
@@ -32,6 +33,10 @@ section, .page, .project, .user, .optionbox, .theme {
 .account-header>h4, #left-menu, #right-view, .page, .project,
 .user, .skillbox, .skill-text, .skill-delete, .theme, label {
 	display: inline-block;
+}
+
+.projectslist-view button, .pageslist-view button, .userslist-view button {
+	width: 60px;
 }
 
 .hidden {
@@ -77,7 +82,7 @@ section, .page, .project, .user, .optionbox, .theme {
 	text-decoration: none;
 }
 
-.other-login-button:hover {
+.other-login-button:hover, .logout:hover {
 	color: #FF1493;
 }
 
@@ -108,35 +113,38 @@ a.login:hover, a.signup:hover {
 
 .admin-logo {
 	position: fixed;
-	height: 60px;
-	top: 5px;
+	height: 57px;
+	top: 0px;
 	right: 5px;
 	z-index: 1;
 }
 
 .account-header {
+	background-color: #6B6B6B;
 	border: none;
-	height: 55px;
-	width: 98%; 
-	padding: 7px 35px;
-	margin: 0 5px;
+	color: white;
+	height: 56px;
+	width: 100%; 
+	padding: 7px 35px; 
+	position: fixed;
+	
 }
 
 ul {
 	list-style: none;
-	padding-left: 7px;
+	padding-left: 0px;
 }
 
 li {
 	color: white;
-	width: 79%;
-	margin: 6px 0px;
-	padding: 7px;
+	height: 40px;
+	width: 100%;
+	margin: 2px 0px;
+	padding: 10px 20px;
 }
 
 li, button {
 	border: 0px;
-	border-radius: 3px;
 	background-color: #FF1493;
 }
 
@@ -182,7 +190,7 @@ li, button {
 }
 
 p.logout>a {
-	color: black;
+	color: white;
 }
 
 a.login, a.signup, a.home {
@@ -205,34 +213,26 @@ p.user-name {
 }
 
 #left-menu {
-	min-width: 105px;  
-	width: 10%;
+	background-color: #EE1289;
+	min-width: 105px; 
+	height: 100%; 
+	width: 105px;
 	vertical-align: top;
 	position: fixed;
+	margin-top: 56px;
 }
 
 #right-view {
 	background-color: white;
 	border-radius: 5px;
+	border-top: 1px solid lightgrey;
+	border-right: 2px solid lightgrey;
 	padding: 5px 15px;
-	margin-top: 17px;
-	margin-left: 12%;
+	margin-top: 70px;
+	margin-left: 125px;
 	margin-right: 19px;
 	width: 85%;
 }
-
-/*
-#right-view:before {
-	content: '';
-	position: absolute;
-	border-top: 5px solid #949494;
-	border-right: 5px solid #949494;
-	top: 76px;
-	right: 23px;
-	width: 70%;
-	height: 100px;
-	z-index: 1;
-} */
 
 .form-section {
 	margin: 4px 0px;
@@ -265,6 +265,7 @@ input {
 }
 
 button {
+	border-radius: 4px;
 	color: white;
 	font-size: 13px;
 	height: 29px;
@@ -275,7 +276,7 @@ button {
 
 li:hover, button:hover {
 	background-color: #8B0A50;
-
+	cursor: pointer;
 }
 
 .inner-details {
@@ -411,20 +412,29 @@ button:hover, .skill-delete:hover {
 
 
 @media only screen and (max-width: 674px) {
+
+	.account-header {
+		top: 0px;
+	}
     
     #left-menu {
+    	background-color: transparent;
         width: 100%;
         height: 100px;
-        top: 50px;
-        min-height: 55px
+        top: 0px;
+        min-height: 55px; 
+        padding-left: 15px;
     }
 
     li {
+    	border-radius: 3px;
     	display: inline-block;
     	text-align: center;
     	font-size: 14px;
-    	width: 16%;
+    	height: 30px;
+    	width: 19%;
     	margin: 3px 5px;
+    	padding: 5px;
     	z-index: 1000;
     }
 
@@ -432,7 +442,7 @@ button:hover, .skill-delete:hover {
     	width: 98%;
     	display: block;
     	margin: auto;
-    	margin-top: 76px;
+    	margin-top: 150px;
     }
 
     .page, .project, .user, .box {
