--- a/views/login.pug
+++ b/views/login.pug
@@ -20,12 +20,7 @@ html(lang='en')
                     input(type='password', id='password', name='password')
                 div(class='form-group')
                     input(type='submit', class='submit login', value='Log In')
-            div(class='other-login')
-                p Log in with
-                a(href='/auth/facebook', class='other-login-button') Facebook <i class="fa fa-facebook-official" aria-hidden="true"></i>
-                a(href='/auth/google', class='other-login-button') Google <i class="fa fa-google" aria-hidden="true"></i>
-                a(href='/auth/github', class='other-login-button') GitHub <i class="fa fa-github" aria-hidden="true"></i>
-                a(href='/auth/linkedin', class='other-login-button') LinkedIn <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+            include other-login
             p Need an account? 
                 a(class='signup', href='/signup') Sign Up
             p Or return 
