--- a/views/signup.pug
+++ b/views/signup.pug
@@ -27,10 +27,5 @@ html(lang='en')
                         input(type='submit', class='submit signup', value='Submit')
                 p Already have an account? 
                     a(class='login', href='/login') Log In
-            div(class='other-login')
-                p Log in or Register with
-                a(href='/auth/facebook', class='other-login-button') Facebook <i class="fa fa-facebook-official" aria-hidden="true"></i>
-                a(href='/auth/google', class='other-login-button') Google <i class="fa fa-google" aria-hidden="true"></i>
-                a(href='/auth/github', class='other-login-button') GitHub <i class="fa fa-github" aria-hidden="true"></i>
-                a(href='/auth/linkedin', class='other-login-button') LinkedIn <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+            include other-login
         include scripts
