--- a/themes/food/walkingdead.pug
+++ b/themes/food/walkingdead.pug
@@ -3,8 +3,8 @@ html(lang='en')
     head
         title Home Page
         meta(charset='utf-8')
-        link(rel='stylesheet', type='text/css', href='/public/creative/creative-style.css')
-        link(href='https://fonts.googleapis.com/css?family=Abhaya+Libre:400,800|Gloria+Hallelujah' rel='stylesheet')
+        link(rel='stylesheet', type='text/css', href='/public/food/food-style.css')
+        link(href='https://fonts.googleapis.com/css?family=Merriweather|Ubuntu:400,700' rel='stylesheet')
     body
         include nav-bar
         section(id='section-content')
@@ -14,5 +14,5 @@ html(lang='en')
                     hr
                     p !{content}
         script(src='https://code.jquery.com/jquery.min.js')
-        script(type='text/javascript', src='/public/creative/creative-app.js')
+        script(type='text/javascript', src='/public/food/food-app.js')
 
