--- a/views/index.pug
+++ b/views/index.pug
@@ -15,3 +15,8 @@ html(lang='en')
             a(class='login', href='/login') Log In
             
         include scripts
+
+
+//- attribute for the icon
+    Icon made by Freepik from www.flaticon.com
+    www.freepik.com
