--- a/app/public/food/food-style.css
+++ b/app/public/food/food-style.css
@@ -6,7 +6,7 @@ body {
 	width: 100%;
 	overflow-x: hidden;
 	font-family: 'Ubuntu', sans-serif;
-	background-image: url('work-desk.jpeg');
+	background-image: url('food3.jpg');
 	background-size: cover;
 	background-repeat: no-repeat;
     background-position: top left;
@@ -38,8 +38,9 @@ hr {
 	width: 70%;
 }
 
-.home h4, .home p, .about h4, .about p, #portfolio-box>h3, #project-container>p {
-	color: white;
+.home h4, .home p, .about h4, .about p, 
+.filter-title, #portfolio-box>h3, #project-container>p {
+	color: #7FFFD4;
 	margin: 5px;
 }
 
@@ -75,7 +76,7 @@ div.nav-link, button#project-close {
 	height: 30px;
 	padding: 5px 15px;
 	margin: 1px 1px;
-	background-color: #B3EE3A;
+	background-color: #7FFFD4;
 	text-decoration: none;
 	color: black;
 	border-radius: 4px;
@@ -97,26 +98,28 @@ button#project-close {
 
 div.nav-link:hover, button#project-close:hover {
 	color: white;
-	background-color: #C0FF3E;
+	background-color: #458B74;
 	cursor: pointer;
 }
 
 div.project-item {
 	background-color: white;
-	width: 30%;
+	width: 45%;
 	min-height: 172px;
-	vertical-align: top;
 	padding: 9px;
 	margin: 3px 6px;
+	text-align: left;
+	vertical-align: top;
+	
 }
 
 div.project-item p, #single-project p {
 	margin: 5px;
 	color: black;
 }
+
 .project-image {
 	width: 65px;
-
 }
 
 #proj-img {
@@ -128,7 +131,7 @@ div.project-item p, #single-project p {
 	padding: 3px 10px;
 	margin: 1px 2px;
 	color: black;
-	background-color: #B3EE3A;
+	background-color: #7FFFD4;
 }
 
 div.project-item:hover {
@@ -142,9 +145,10 @@ div.project-item:hover {
 #single-project {
 	background-color: white;
 	position: absolute;
-	top: 50px;
+	top: 80px;
 	left: 16%;
 	width: 65%;
+	overflow-y: scroll;
 	padding: 15px 20px;
 	-webkit-box-shadow: 4px 4px 25px 0px rgba(50, 50, 50, 1);
 	-moz-box-shadow:    4px 4px 25px 0px rgba(50, 50, 50, 1);
@@ -169,6 +173,10 @@ h3 {
 	margin: auto;
 	padding-top: 20px;
 	margin-top: 20px;
+}
+
+#project-container {
+	text-align: center;
 }
 
 #project-container>p {
