--- a/themes/default/portfolio.pug
+++ b/themes/default/portfolio.pug
@@ -4,30 +4,9 @@ block content
         h3 #{title}
         div(id='project-container')
             p !{content}
-            each project in projects
-                div(class='project-item', data-name= project.name, data-url= project.friendlyUrl, data-img= project.image, data-livelink= project.livelink, data-codeurl= project.codeUrl, data-desc= project.description, data-skills = project.skills)
-                    if project.image
-                        - var imageUrl = project.image
-                    else
-                        - var imageUrl = '/public/default/page.png'
-                    img(class='project-image', src= imageUrl )
-                    p(class='project-name')= project.name
-                    div(class='skill-box')
-                        each skill in project.skills
-                            span(class='skill')= skill 
-        div(class='grey-out hidden')
-        div(id='single-project', class='hidden')
-            img(id='proj-img', src='')
-            p(id='proj-name') Project Name: 
-                span
-            p
-                a(id='proj-livelink') 
-                    span Live Site 
-                span | 
-                a(id='proj-codeurl') 
-                    span Code Site
-            div(id='proj-desc') Description: 
-                div
-            p Skills:
-            div(id='proj-skill-box')
-            button(type='button', id='project-close') Close
+            include project-list
+        include project
+
+
+//- filter by skill
+//- add drop down?
