--- a/themes/food/project.pug
+++ b/themes/food/project.pug
@@ -1,22 +1,17 @@
-extends home.pug
-block content
-	div
-        h3 #{portfolioTitle}
-        p #{portfolioContent}
-    each project in projects
-        div(class='project-item')
-            p Name: 
-                span= project.name
-            p Url: 
-                span= project.friendlyUrl
-            p Image link: 
-                span= project.image
-            p Live link: 
-                span= project.livelink
-            p Code Url: 
-                span= project.codeUrl
-            p Description: 
-                span= project.description
-            div(class='skill-box')
-                each skill in project.skills
-                    span(class='skill')= skill 
+.project
+div(class='grey-out hidden')
+div(id='single-project', class='hidden')
+    img(id='proj-img', src='')
+    p(id='proj-name') Project Name: 
+        span
+    p
+        a(id='proj-livelink', target='_blank') 
+            span Live Site 
+        span | 
+        a(id='proj-codeurl', target='_blank') 
+            span Code Site
+    div(id='proj-desc') Description: 
+        div
+    p Skills:
+    div(id='proj-skill-box')
+    button(type='button', id='project-close') Close
