v21 resize portfolio pics

--- a/app/public/default/default-style.css
+++ b/app/public/default/default-style.css
@@ -104,9 +104,13 @@ div.nav-link:hover, button#project-close:hover {
 
 div.project-item {
 	background-color: white;
-	width: 45%;
-	min-height: 172px;
+	max-width: 340px;
+	width: 99%;
+	max-height: 281px;
+	min-height: 281px;
+	height: 99%;
 	margin: 3px 6px;
+	overflow: hidden;
 	padding: 9px;
 	text-align: left;
 	vertical-align: top;
@@ -118,11 +122,17 @@ div.project-item p, #single-project p {
 }
 
 .project-image {
-	width: 65px;
+	display: block;
+	margin: auto;
+	max-width: 235px;
+	width: 99%;
+	max-height: 235px;
+	height: 99%;
 }
 
 #proj-img {
 	width: 100px;
+	float: right;
 }
 
 .skill {
@@ -145,8 +155,8 @@ div.project-item:hover {
 	background-color: white;
 	position: absolute;
 	top: 80px;
-	left: 16%;
-	width: 65%;
+	left: 11%;
+	width: 77%;
 	overflow-y: scroll;
 	padding: 15px 20px;
 	-webkit-box-shadow: 4px 4px 25px 0px rgba(50, 50, 50, 1);
@@ -205,12 +215,11 @@ h3 {
 .skill-box {
 	width: 70%;
 	margin: 25px 0;
-
 }
 
-img {
-	float: right;
-	clear: left;
+#skills-selector {
+	font-size: 14px;
+	margin-bottom: 7px;
 }
 
 a {
