--- a/app/public/creative/creative-style.css
+++ b/app/public/creative/creative-style.css
@@ -13,10 +13,6 @@ body {
     background-attachment: fixed;
 }
 
-section {
-	background-color: ;
-}
-
 .hidden {
 	display: none;
 }
@@ -28,23 +24,24 @@ section {
 	left: 10px;
 }
 
-.home, .about {
-	margin-left: 3%;
-	margin-top: 17%;
+.home, .about, .contact {
+	margin-left: 4%;
+	margin-top: 180px;
+	width: 80%;
 }
 
 hr {
 	margin-left: 10px;
-	width: 70%;
+	width: 75%;
 }
 
 .home h4, .home p, .about h4, .about p, #portfolio-box>h3, 
-.filter-title, #project-container>p {
+.filter-title, #project-container>p, .contact h4, .contact p {
 	color: white;
 	margin: 5px;
 }
 
-.home h4, .about h4, #portfolio-box>h3 {
+.home h4, .about h4, #portfolio-box>h3, .contact h4 {
 	font-family: 'Gloria Hallelujah', cursive;
 }
 
@@ -52,11 +49,11 @@ hr {
 	font-size: 60px;
 }
 
-.about h4, #portfolio-box>h3 {
+.about h4, #portfolio-box>h3, .contact h4 {
 	font-size: 40px;
 }
 
-.home p, .about p {
+.home p, .about p, .contact p {
 	font-size: 25px;
 	max-width: 600px;
 }
@@ -65,23 +62,42 @@ hr {
 	position: fixed;
 	right: 10%;
 	top: 17px;
+	z-index: 1;
 }
 
-div.nav-link, .project-item, .skill {
+.contact-links {
+	margin-top: 25px;
+	width: 80%;
+}
+
+div.nav-link, .project-item, .skill, .contact-link {
 	display: inline-block;
 }
 
-div.nav-link, button#project-close {
+div.nav-link, button#project-close, .contact-link {
+	border-radius: 4px;
+	color: black;
 	height: 32px;
 	padding: 6px 20px;
-	margin: 1px 1px;
-	background-color: #54FF9F;
 	text-decoration: none;
-	color: black;
-	border-radius: 4px;
 }
 
-div.nav-link {
+.contact-link {
+	background: #CDCDC1;
+	color: black;
+	margin: 5px;
+}
+
+.contact-link:hover {
+	background: #F4A460;
+}
+
+div.nav-link, button#project-close {
+	background-color: #54FF9F;
+	margin: 1px 1px;
+}
+
+div.nav-link, .contact-link {
 	-webkit-box-shadow: 2px 2px 10px 0px rgba(50, 50, 50, 0.74);
 	-moz-box-shadow:    2px 2px 10px 0px rgba(50, 50, 50, 0.74);
 	box-shadow:         2px 2px 10px 0px rgba(50, 50, 50, 0.74);
@@ -105,12 +121,11 @@ div.project-item {
 	background-color: white;
 	max-width: 340px;
 	width: 99%;
-	max-height: 281px;
-	min-height: 281px;
+	max-height: 300px;
+	min-height: 300px;
 	height: 99%;
 	margin: 3px 6px;
-	overflow: hidden;
-	padding: 9px;
+	padding: 11px 15px;
 	text-align: left;
 	vertical-align: top;
 }
@@ -120,13 +135,16 @@ div.project-item p, #single-project p {
 	color: black;
 }
 
+.img-box {
+	max-height: 250px;
+	min-height: 250px;
+	height: 100%;
+	overflow: hidden;
+}
+
 .project-image {
 	display: block;
 	margin: auto;
-	max-width: 235px;
-	width: 99%;
-	max-height: 235px;
-	height: 99%;
 }
 
 #proj-img {
@@ -144,7 +162,8 @@ div.project-item p, #single-project p {
 
 div.project-item:hover {
 	background-color: #F4A460;
-	color: white;
+	cursor: pointer;
+	opacity: .95;
 	-webkit-box-shadow: 2px 2px 10px 0px rgba(50, 50, 50, 0.74);
 	-moz-box-shadow:    2px 2px 10px 0px rgba(50, 50, 50, 0.74);
 	box-shadow:         2px 2px 10px 0px rgba(50, 50, 50, 0.74);
@@ -152,10 +171,10 @@ div.project-item:hover {
 
 #single-project {
 	background-color: white;
-	position: absolute;
-	top: 80px;
-	left: 16%;
-	width: 65%;
+	position: fixed;
+	top: 95px;
+	left: 11%;
+	width: 77%;
 	overflow-y: scroll;
 	padding: 15px 20px;
 	-webkit-box-shadow: 4px 4px 25px 0px rgba(50, 50, 50, 1);
@@ -172,7 +191,7 @@ div.project-item:hover {
 	background: rgba(0,0,0,0.5);
 }
 
-h3 {
+h3, #project-container {
 	text-align: center;
 }
 
@@ -181,10 +200,6 @@ h3 {
 	margin: auto;
 	padding-top: 20px;
 	margin-top: -20px;
-}
-
-#project-container {
-	text-align: center;
 }
 
 #project-container>p {
@@ -230,8 +245,29 @@ a:hover {
 	cursor: pointer;
 }
 
+/*
+@media only screen and (min-width: 550px) and (max-width: 765px) {
 
-@media only screen and (min-width: 584px) and (max-width: 825px) {
+	#nav {
+		right: 1%;
+	}
+
+	.contact-links {
+		margin: 25px auto;
+	}
+
+	.home, .about, .contact {
+		background: rgba(0,0,0,0.60);
+		text-align: center;
+		margin: auto;
+		padding: 20px;
+		width: 80%;
+	}
+
+	hr {
+		margin: auto;
+		width: 80%;
+	}
 
 	#single-project {
 		left: 13%;
@@ -248,9 +284,35 @@ a:hover {
 		margin: 7px;
 	}
 
-}
+} */
 
-@media only screen and (max-width: 584px) {
+@media only screen and (max-width: 550px) {
+
+	#nav {
+		right: 1%;
+	}
+
+	.home h4, .about h4, .contact h4 {
+		display: inline-block;
+		line-height: 1;
+		margin-bottom: 20px;
+	}
+
+	.contact-links {
+		margin: 25px auto;
+	}
+
+	.home, .about, .contact {
+		background: rgba(0,0,0,0.50);
+		text-align: center;
+		margin: auto;
+		padding: 20px;
+		width: 80%;
+	}
+
+	hr {
+		margin: auto;
+	}
 
 	#single-project {
 		left: 1%;
@@ -258,6 +320,8 @@ a:hover {
 	}
 
 	div.project-item {
+		display: inline-block;
+		max-width: 550px;
 		width: 95%;
 	}
 
