--- a/themes/default/home.pug
+++ b/themes/default/home.pug
@@ -3,8 +3,7 @@ html(lang='en')
     head
         title Home Page
         meta(charset='utf-8')
-        link(rel='stylesheet', type='text/css', href='/public/default/default-style.css')
-        link(href='https://fonts.googleapis.com/css?family=Merriweather|Ubuntu:400,700' rel='stylesheet')
+        include styles
     body
         include nav-bar
         section(id='section-content')
@@ -13,6 +12,5 @@ html(lang='en')
                     h4 #{title}
                     hr
                     p !{content}
-        script(src='https://code.jquery.com/jquery.min.js')
-        script(type='text/javascript', src='/public/default/default-app.js')
+        include scripts
 
