--- a/themes/default/project-list.pug
+++ b/themes/default/project-list.pug
@@ -11,7 +11,7 @@ div(id='results')
 
 div(class='template hidden')
     div(class='project-item')
+        div(class='img-box')
+            img(class='project-image' )
         p(class='project-name')
-        img(class='project-image' )
-        div(class='skill-box')
-            
+        
