--- a/views/admin-layout.pug
+++ b/views/admin-layout.pug
@@ -1,7 +1,7 @@
 doctype html
 html(lang='en')
     head
-        title Admin Page
+        title Paige - Admin Dashboard
         meta(charset='utf-8') 
         include style
     body
