--- a/views/index.pug
+++ b/views/index.pug
@@ -1,7 +1,7 @@
 doctype html
 html(lang='en')
     head
-        title Index Page
+        title Paige
         meta(charset='utf-8')
         include style
     
