--- a/views/login.pug
+++ b/views/login.pug
@@ -1,7 +1,7 @@
 doctype html
 html(lang='en')
     head
-        title Login Page
+        title Paige - Log In
         meta(charset='utf-8')
         include style
     body
