--- a/themes/default/project.pug
+++ b/themes/default/project.pug
@@ -5,10 +5,10 @@ div(id='single-project', class='hidden')
     p(id='proj-name') Project Name: 
         span
     p
-        a(id='proj-livelink') 
+        a(id='proj-livelink', target='_blank') 
             span Live Site 
         span | 
-        a(id='proj-codeurl') 
+        a(id='proj-codeurl', target='_blank') 
             span Code Site
     div(id='proj-desc') Description: 
         div
