--- a/views/signup.pug
+++ b/views/signup.pug
@@ -1,7 +1,7 @@
 doctype html
 html(lang='en')
     head
-        title Signup Page
+        title Paige - Sign Up
         meta(charset='utf-8')
         include style
     body
