--- a/themes/creative/home.pug
+++ b/themes/creative/home.pug
@@ -1,7 +1,7 @@
 doctype html
 html(lang='en')
     head
-        title Home Page
+        title My Portfolio
         meta(charset='utf-8')
         include styles
     body
