--- a/themes/creative/styles.pug
+++ b/themes/creative/styles.pug
@@ -1,6 +1,7 @@
 .styles
 link(rel='stylesheet', type='text/css', href='/public/creative/creative-style.css')
 link(href='https://fonts.googleapis.com/css?family=Abhaya+Libre:400,800|Gloria+Hallelujah' rel='stylesheet')
+script(src='https://use.fontawesome.com/06476ec048.js')
 
 
 //- Add style and font libraries below
