--- a/themes/food/project-list.pug
+++ b/themes/food/project-list.pug
@@ -14,3 +14,4 @@ div(class='template hidden')
         div(class='img-box')
             img(class='project-image' )
         p(class='project-name')
+        div(class='skill-box')
