--- a/themes/default/project-list.pug
+++ b/themes/default/project-list.pug
@@ -14,4 +14,5 @@ div(class='template hidden')
         div(class='img-box')
             img(class='project-image' )
         p(class='project-name')
+        div(class='skill-box')
         
