v24 alpha order skills

--- a/themes/creative/contact.pug
+++ b/themes/creative/contact.pug
@@ -29,7 +29,7 @@ block content
                 span(class='contact-text') Facebook <i class="fa fa-facebook-official" aria-hidden="true"></i>
             a(class='contact-link', target='_blank', href= twitterLink)
                 span(class='contact-text') Twitter <i class="fa fa-twitter-square" aria-hidden="true"></i>
-            a(class='contact-link')
-                span(class='contact-text', target='_blank', href= instagramLink) Instagram <i class="fa fa-instagram" aria-hidden="true"></i>
+            a(class='contact-link', target='_blank', href= instagramLink)
+                span(class='contact-text') Instagram <i class="fa fa-instagram" aria-hidden="true"></i>
             a(class='contact-link', target='_blank', href= snapchatLink)
                 span(class='contact-text') Snapchat <i class="fa fa-snapchat-square" aria-hidden="true"></i>
