--- a/themes/food/nav-bar.pug
+++ b/themes/food/nav-bar.pug
@@ -22,6 +22,7 @@
 - var contactText = 'Contact'
 
 //- =====================
+//- Don't Change Below 
 
 - var homeLink = '/' + home
 - var aboutLink = '/' + about
