dependencies, admin home details, readme, logout redirect

--- a/app/public/creative/creative-style.css
+++ b/app/public/creative/creative-style.css
@@ -224,6 +224,7 @@ h3, #project-container {
 }
 
 #project-container>p {
+	font-size: 18px;
 	text-align: center;
 	margin: 15px;
 }
@@ -293,9 +294,9 @@ a:hover {
 }
 
 p.powered {
-	bottom: 3px;
+	bottom: 5px;
 	color: lightgrey;
-	font-size: 14px;
+	font-size: 16px;
 	margin: 0;
 	position: fixed;
 	right: 15px;
@@ -305,6 +306,10 @@ p.powered a {
 	color: lightgrey;
 	font-style: italic;
 	text-decoration: none;
+}
+
+p.powered a:hover {
+	color: #EE1289;
 }
 
 
