--- a/app/public/default/default-style.css
+++ b/app/public/default/default-style.css
@@ -297,18 +297,22 @@ a:hover {
 }
 
 p.powered {
-	bottom: 4px;
+	bottom: 5px;
 	color: darkgrey;
-	font-size: 14px;
+	font-size: 15px;
 	margin: 0;
 	position: fixed;
 	left: 15px;
 }
 
 p.powered a {
-	color: darkgrey;
+	color: lightgrey;
 	font-style: italic;
 	text-decoration: none;
+}
+
+p.powered a:hover {
+	color: #EE1289;
 }
 
 
