--- a/themes/food/nav-bar.pug
+++ b/themes/food/nav-bar.pug
@@ -4,7 +4,8 @@
     To switch out the current default pages to newly created pages on your site, you will need to have 
     template files that match the Friendly Url of the new page. 
 
-    The following Friendly Urls are in use by the CMS: 'index', 'login', 'signup', 'cms'.
+    The following Friendly Urls are in use by the CMS: 
+      'index', 'login', 'signup', 'project-list', 'project', 'scripts', 'styles', 'cms'.
     Make sure that your pages do not also utilize these Urls.
 
 //- Change these values to your page's Friendly Urls
