admin home details, contact template update

--- a/themes/creative/contact.pug
+++ b/themes/creative/contact.pug
@@ -17,6 +17,13 @@ block content
     - var instagramLink = http + 'www.instagram.com'
     - var snapchatLink = http + 'www.snapchat.com'
 
+    //- Additional Font Awesome Icons
+        Behance  <i class="fa fa-behance" aria-hidden="true"></i>
+        Google Plus  <i class="fa fa-google-plus-square" aria-hidden="true"></i>
+        Youtube  <i class="fa fa-youtube" aria-hidden="true"></i>
+        Whatsapp  <i class="fa fa-whatsapp" aria-hidden="true"></i>
+        Wordpress  <i class="fa fa-wordpress" aria-hidden="true"></i>
+
     div(class='contact')
         h4 #{title}
         p !{content}
